--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -39,9 +39,9 @@
   <string name="prefs_fingerprint">Fingerabdrucksperre</string>
   <string name="prefs_fingerprint_summary">Passwort oder Wisch-Muster eingeben um diese Option zu  aktivieren</string>
   <string name="prefs_touches_with_other_visible_windows">Berührungen mit anderen sichtbaren Fenstern</string>
-  <string name="prefs_touches_with_other_visible_windows_summary">Berührungen zulassen, wenn die Ansicht von einem anderen sichtbaren Fenster verdeckt wird. Aktivieren Sie es, um Lichtfilter-Apps zu verwenden.</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Berührungen zulassen, wenn die Ansicht von einem anderen sichtbaren Fenster verdeckt wird. Aktiviere dies, um Lichtfilter-Apps zu verwenden.</string>
   <string name="confirmation_touches_with_other_windows_title">Willst Du diese Funktion wirklich einschalten?</string>
-  <string name="confirmation_touches_with_other_windows_message">Verwenden Sie diese Funktion unter Ihrer eigenen Verantwortung. Eine bösartige Anwendung könnte versuchen, Sie zu täuschen und Sie Aktionen ausführen lassen, die Sie nicht kennen, indem sie andere Ansichten verwendet.</string>
+  <string name="confirmation_touches_with_other_windows_message">Verwende diese Funktion unter Ihrer eigenen Verantwortung. Eine bösartige Anwendung könnte versuchen, dich zu täuschen und dich Aktionen ausführen lassen, die du nicht kennst, indem diese andere Ansichten verwenden.</string>
   <string name="prefs_camera_picture_upload">Bilder</string>
   <string name="prefs_camera_picture_upload_summary">Lade Fotos von der Kamera automatisch hoch</string>
   <string name="prefs_camera_video_upload">Videos</string>
@@ -53,7 +53,7 @@
   <string name="prefs_log_delete_history_button">Verlauf löschen</string>
   <string name="prefs_help">Hilfe</string>
   <string name="prefs_sync_calendar_contacts">Synchronisiere deine Kontakte, Kalendar und Aufgaben</string>
-  <string name="prefs_sync_calendar_contacts_summary">Installiere DAVx⁵</string>
+  <string name="prefs_sync_calendar_contacts_summary">DAVx⁵ installieren</string>
   <string name="prefs_recommend">Empfehle dies einem Freund</string>
   <string name="prefs_feedback">Rückmeldungen</string>
   <string name="prefs_imprint">Impressum</string>
@@ -155,7 +155,7 @@
   <string name="uploader_upload_text_filename_hint">Dateiname</string>
   <string name="uploader_upload_camera_upload_files">Hochladen von Hochladedateien der Kamera</string>
   <string name="uploader_upload_available_offline_files">Hochladen von verfügbaren Offline-Dateien</string>
-  <string name="uploader_upload_requested_from_wifi_files">Hochladen von angeforderten Wifi-Dateien</string>
+  <string name="uploader_upload_requested_from_wifi_files">Hochladen von angeforderten WLAN-Dateien</string>
   <string name="ssl_certificate_not_trusted">Zertifikat des Servers ist nicht vertrauenswürdig</string>
   <string name="uploads_view_title">Uploads</string>
   <string name="uploads_view_group_current_uploads">Wird hochgeladen</string>
@@ -341,10 +341,10 @@
   <string name="camera_video_upload_on_wifi">Videos nur über Wifi hochladen</string>
   <string name="camera_upload_path">/CameraUpload</string>
   <string name="confirmation_disable_camera_uploads_title">Bestätigen</string>
-  <string name="confirmation_disable_pictures_upload_message">Sind Sie sicher, dass Sie dieses Feature deaktivieren möchten? Alle eingereihten Bilder werden nicht hochgeladen</string>
-  <string name="confirmation_disable_videos_upload_message">Sind Sie sicher, dass Sie dieses Feature deaktivieren möchten? Alle eingereihten Videos werden nicht hochgeladen</string>
-  <string name="proper_pics_folder_warning_camera_upload">Bitte stellen Sie sicher, dass sich der ausgewählte Ordner an der Stelle befindet, an der die von Ihnen verwendete Kamera die aufgenommenen Bilder speichert. Andernfalls kann die Funktion Ihre Bilder nicht erkennen. Beachten Sie, dass die Bilder innerhalb von mindestens 15 Minuten nach der Aufnahme hochgeladen werden.</string>
-  <string name="proper_videos_folder_warning_camera_upload">Bitte stellen Sie sicher, dass sich der ausgewählte Ordner an der Stelle befindet, an der die von Ihnen verwendete Kamera die aufgenommenen Videos speichert. Andernfalls kann die Funktion Ihre Videos nicht erkennen. Beachten Sie, dass Videos innerhalb von mindestens 15 Minuten nach der Aufnahme hochgeladen werden.</string>
+  <string name="confirmation_disable_pictures_upload_message">Bist du dir sicher, dass du dieses Feature deaktivieren möchtest? Alle eingereihten Bilder werden nicht hochgeladen</string>
+  <string name="confirmation_disable_videos_upload_message">Bist du dir sicher, dass du dieses Feature deaktivieren möchtest? Alle eingereihten Videos werden nicht hochgeladen</string>
+  <string name="proper_pics_folder_warning_camera_upload">Bitte stelle sicher, dass sich der ausgewählte Ordner an der Stelle befindet, an der die von Ihnen verwendete Kamera die aufgenommenen Bilder speichert. Andernfalls kann die Funktion Ihre Bilder nicht erkennen. Beachte, dass die Bilder innerhalb von mindestens 15 Minuten nach der Aufnahme hochgeladen werden.</string>
+  <string name="proper_videos_folder_warning_camera_upload">Bitte stelle sicher, dass sich der ausgewählte Ordner an der Stelle befindet, an der die von Ihnen verwendete Kamera die aufgenommenen Videos speichert. Andernfalls kann die Funktion Ihre Videos nicht erkennen. Beachte, dass Videos innerhalb von mindestens 15 Minuten nach der Aufnahme hochgeladen werden.</string>
   <string name="conflict_title">Dateikonfilikt</string>
   <string name="conflict_description">Ein Konflikt ist in der Datei %1$s aufgetreten, hier tippen um dies zu lösen</string>
   <string name="conflict_message">Welche Datei möchtest du behalten? Wenn du beide Versionen auswählst, wird der lokalen Datei eine Zahl am Ende Ihres Dateiname angehangen.</string>
@@ -521,7 +521,7 @@
   <string name="media_service_notification_channel_description">Musik-Player anzeigen</string>
   <string name="file_sync_notification_channel_name">Datei - Synchronisation</string>
   <string name="file_sync_notification_channel_description">Ergebnis der Datei - Synchronisation anzeigen</string>
-  <string name="clicks_to_be_developer">Sie sind %1$d Klicks entfernt, um die Entwicklermenüs zu aktivieren</string>
+  <string name="clicks_to_be_developer">Du bist %1$d Klicks entfernt, um die Entwicklermenüs zu aktivieren</string>
   <string name="rate_dialog_title">Bitte %1$s bewerten!</string>
   <string name="rate_dialog_description">Wenn dir diese App gefällt, nimm dir bitte etwas Zeit, um diese zu bewerten. Dein Feedback ist für uns wichtig.</string>
   <string name="button_no_thanks_name">Nein, Danke</string>
@@ -548,6 +548,10 @@
   <string name="welcome_feature_7_title">Alle auswählen</string>
   <string name="welcome_feature_7_text">Wähle alle Dateien aus</string>
   <string name="welcome_feature_8_title">Offline verfügbar</string>
-  <string name="welcome_feature_8_text">Deine Dateien werden automatisch Synchronisiert</string>
-  <string name="no_borwser_installed_alert">Es ist kein Browser installiert. Bitte installieren Sie zur sicheren Anmeldung einen Browser.</string>
+  <string name="welcome_feature_8_text">Deine Dateien werden automatisch synchronisiert</string>
+  <string name="welcome_feature_9_title">Dokumentenanbieter</string>
+  <string name="welcome_feature_9_text">Zugriff und Bearbeiten deiner ownCloud-Dateien durch andere Apps</string>
+  <string name="welcome_feature_10_title">Protokolle mit Suchfunktion für jeden</string>
+  <string name="welcome_feature_10_text"> Sende uns deine Protokolle, damit die App besser funktioniert</string>
+  <string name="no_borwser_installed_alert">Es ist kein Browser installiert. Bitte installiere zur sicheren Anmeldung einen Browser.</string>
 </resources>
