--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -551,5 +551,9 @@
   <string name="welcome_feature_7_text">בחירת כל הקבצים בפעם אחת</string>
   <string name="welcome_feature_8_title">זמין במצב לא מקוון</string>
   <string name="welcome_feature_8_text">הקבצים שלך סונכרנו אוטומטית</string>
+  <string name="welcome_feature_9_title">ספק המסמך</string>
+  <string name="welcome_feature_9_text">גישה ועריכה של קובצי ה- ownCloud שלך מיישומים אחרים</string>
+  <string name="welcome_feature_10_title">יומני תיעוד עם חיפוש לכולם</string>
+  <string name="welcome_feature_10_text">משלוח של יומני התיעוד שלך לשיפור עבודת היישום</string>
   <string name="no_borwser_installed_alert">לא הותקן דפדפן. יש להתקין דפדפן בכדי לאפשר חיבור מאובטח.</string>
 </resources>
