--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -548,5 +548,7 @@
   <string name="welcome_feature_7_text">Seleccione todos sus archivos de una vez</string>
   <string name="welcome_feature_8_title">Disponible offline</string>
   <string name="welcome_feature_8_text">Sus archivos sincronizados automáticamente</string>
+  <string name="welcome_feature_9_title">Proveedor del documento</string>
+  <string name="welcome_feature_10_title">Registros con búsqueda para todos</string>
   <string name="no_borwser_installed_alert">No hay un navegador instalado, Por favor, instale uno para poder realizar un login seguro</string>
 </resources>
