--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -370,6 +370,7 @@
     <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
 
     <string name="get_shares_error">An error occurred while trying to retrieve shares</string>
+    <string name="get_sharees_error">An error occurred while trying to retrieve users and groups</string>
     <string name="get_capabilities_error">An error occurred while trying to retrieve capabilities</string>
     <string name="share_link_no_support_share_api">Sorry, sharing is not enabled on your server. Please contact your
 		administrator.</string>
