--- a/docs/books/ownCloud_Android_App_Manual.adoc
+++ b/docs/books/ownCloud_Android_App_Manual.adoc
@@ -8,5 +8,4 @@ The ownCloud Team <docs@owncloud.com>
 :toclevels: 1
 :icons: font
 :icon-set: octicon
-
-include::modules/ROOT/pages/index.adoc[leveloffset=+1]
+:module_base_path: modules/ROOT/pages/
