--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -549,5 +549,8 @@ Il Download del file inizierà automaticamente</string>
   <string name="welcome_feature_7_text">Seleziona tutti i file</string>
   <string name="welcome_feature_8_title">Disponibile non in linea</string>
   <string name="welcome_feature_8_text">I tuoi file sincronizzati automaticamente</string>
+  <string name="welcome_feature_9_title">Fornitore di documenti</string>
+  <string name="welcome_feature_9_text">Accedi e modifica i tuoi file da altre app</string>
+  <string name="welcome_feature_10_text">Inviaci i tuoi log per rendere l\'app migliore</string>
   <string name="no_borwser_installed_alert">Nessun browser installato. Si prega di installarne uno in modo da consentire un accesso sicuro.</string>
 </resources>
